[package]
name = "mistctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_yaml = "0.9.34"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
config = { path = "../config" }
serde_json = "1.0.141"
