[package]
name = "mistd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
config = { path = "../config" }
mistctr = { path = "../mistctr" }
